force-app/main/default/objects/Field_Trip__Object_Analysis__c/fields/Field_Trip__Fields__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Fields__c</fullName>
    <label>Fields</label>
    <summaryForeignKey>Field_Trip__Field_Analysis__c.Field_Trip__Object_Analysis__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>