force-app/main/default/objects/Field_Trip__Object_Analysis__c/fields/Field_Trip__Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Last_Analyzed__c</fullName>
    <label>Last Analyzed</label>
    <type>DateTime</type>
</CustomField>